tooling/nargo_cli/tests/snapshots/execution_success/simple_2d_array/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: Field, array_input: [[Field; 2]; 2]) {
    assert(array_input[0][0] == x);
    assert(array_input[0][1] == y);
    let arr: [[Field; 2]; 1] = [[3, 3]];
    assert(arr[0] == array_input[1]);
}
